kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app: django-app
spec:
  replicas: 3
  selector:
    matchLabels:
      project: django
  template:
    metadata:
      labels:
        project: django
    spec:
      containers:
        - name : django-container
          image: django_image:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
            
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    project: django
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
